--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -3,6 +3,11 @@
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 $().ready(function() {
+	/* 
+		https://erikflowers.github.io/weather-icons/
+		https://openweathermap.org/api/one-call-api
+	*/
+
 	$( "#accordion" ).accordion({
 		active : 0,
 		collapsible : true,
@@ -23,7 +28,8 @@ $().ready(function() {
 			  "clouds":0,"pop":0,"uvi":6.15},
 			  ...
 	*/
-	const optionsDate={day: "numeric", month: "numeric", hour: "numeric", minute: "numeric"};
+	const optDateTime={day: "numeric", month: "numeric", hour: "numeric", minute: "numeric"};
+	const optDate={day: "numeric", month: "numeric"};
 	$.ajax({
     	url: "https://api.openweathermap.org/data/2.5/onecall?lat=" +
 			[[${rucher.latitude}]] + "&lon=" + [[${rucher.longitude}]] +
@@ -32,7 +38,7 @@ $().ready(function() {
 			"&APPID=" + [[${openweathermapKey}]] +
 			"&exclude=minutely,hourly,alerts"			
     }).done(function (data) {
-    	$('#date').html(fdate(data.current.dt));
+    	$('#date').html(fdt(data.current.dt));
        	$('#description').html(data.current.weather[0].description);
        	$('#temperature').html(data.current.temp.toFixed(1) + '°C');
        	$('#humidite').html(data.current.humidity + '%');
@@ -41,51 +47,101 @@ $().ready(function() {
        	$('#tempRessent').html(data.current.feels_like.toFixed(1) + '°C');
        	$('#uvi').html(data.current.uvi);
        	$('#ventVitesse').html((data.current.wind_speed * 3.6).toFixed(1) + 'km/h');
-       	$('#ventDirection').html(data.current.wind_deg + '° ' + degToCard(data.current.wind_deg));
+       	$('#ventDirection').html(data.current.wind_deg + '° ' + degToCard(data.current.wind_deg) +
+       		'&nbsp<i class="wi wi-wind from-' + data.current.wind_deg + '-deg"></i>'
+       	);
        	$('#ventRafales').html((data.current.hasOwnProperty('wind_gust')?(data.current.wind_gust * 3.6):'0') + 'km/h');
        	$('#nuages').html(data.current.clouds + '%');
        	$('#visibilite').html(data.current.visibility + 'm');       	
        	$('#pluieVol1h').html((data.current.hasOwnProperty('rain')?(data.current.rain['1h']):'0') + 'mm');
        	$('#neigeVol1h').html((data.current.hasOwnProperty('snow')?(data.current.snow['1h']):'0') + 'mm');
-       	$('#leverSoleil').html(fdate(data.current.sunrise));
-       	$('#coucherSoleil').html(fdate(data.current.sunset));
-       	$('#leverLune').html(fdate(data.daily[0].moonrise));
-       	$('#coucherLune').html(fdate(data.daily[0].moonset));
-       	$('#phaseLune').html(data.daily[0].moon_phase);
+       	$('#leverSoleil').html(fdt(data.current.sunrise));
+       	$('#coucherSoleil').html(fdt(data.current.sunset));
+       	$('#leverLune').html(fdt(data.daily[0].moonrise));
+       	$('#coucherLune').html(fdt(data.daily[0].moonset));
+       	$('#phaseLune').html(data.daily[0].moon_phase +
+       			'&nbsp<i class="wi ' + moonIcon(data.daily[0].moon_phase) + '"></i>'
+       	);
        	let htmlPrev='';
        	data.daily.forEach(function(day) {
-       		htmlPrev+='<tr><td>' + fdate(day.dt) + '</td><td>' 
+       		htmlPrev+='<tr><td>' + fd(day.dt) + '</td><td>' 
        			+ day.temp.min.toFixed(1) + '°C</td><td>' 
-       			+ day.temp.max.toFixed(1) + '°C</td></tr>';
+       			+ day.temp.max.toFixed(1) + '°C</td><td>'
+       			// + day.weather[0].description + '</td><td>'
+       			+ day.clouds + '%' + '</td><td>'
+       			+ (day.rain?day.rain:0) + 'mm' + '</td><td>'
+       			+ day.pop + '</td></tr>' ;
        		});
        	$('#previsions').append(htmlPrev);
 	});
-	function fdate(t) {
-		return new Date(t*1000).toLocaleString(undefined, optionsDate).replace(' à','');
+	function fdt(t) {
+		return new Date(t*1000).toLocaleString(undefined, optDateTime).replace(' à','');
+	}
+	function fd(t) {
+		return new Date(t*1000).toLocaleString(undefined, optDate);
 	}
 	function degToCard(deg) {
 		if (deg>11.25 && deg<=33.75) return "NNE";
-		else if (deg>33.75 && deg<=56.25) return "NE";
-		else if (deg>56.25 && deg<=78.75) return "ENE";
-		else if (deg>78.75 && deg<=101.25) return "E";
-		else if (deg>101.25 && deg<=123.75) return "ESE";
-		else if (deg>123.75 && deg<=146.25) return "SE";
-		else if (deg>146.25 && deg<=168.75) return "SSE";
-		else if (deg>168.75 && deg<=191.25) return "S";
-		else if (deg>191.25 && deg<=213.75) return "SSW";
-		else if (deg>213.75 && deg<=236.25) return "SW";
-		else if (deg>236.25 && deg<=258.75) return "WSW";
-		else if (deg>258.75 && deg<=281.25) return "W";
-		else if (deg>281.25 && deg<=303.75) return "WNW";
-		else if (deg>303.75 && deg<=326.25) return "NW";
-		else if (deg>326.25 && deg<=348.75) return "NNW";
-		else return "N"; 		
+		if (deg>33.75 && deg<=56.25) return "NE";
+		if (deg>56.25 && deg<=78.75) return "ENE";
+		if (deg>78.75 && deg<=101.25) return "E";
+		if (deg>101.25 && deg<=123.75) return "ESE";
+		if (deg>123.75 && deg<=146.25) return "SE";
+		if (deg>146.25 && deg<=168.75) return "SSE";
+		if (deg>168.75 && deg<=191.25) return "S";
+		if (deg>191.25 && deg<=213.75) return "SSW";
+		if (deg>213.75 && deg<=236.25) return "SW";
+		if (deg>236.25 && deg<=258.75) return "WSW";
+		if (deg>258.75 && deg<=281.25) return "W";
+		if (deg>281.25 && deg<=303.75) return "WNW";
+		if (deg>303.75 && deg<=326.25) return "NW";
+		if (deg>326.25 && deg<=348.75) return "NNW";
+		return "N"; 		
+	}
+	function moonIcon(phase) {
+		if (phase<1/28) return 'wi-moon-new';
+		if (phase<2/28) return 'wi-moon-waxing-crescent-1';
+		if (phase<3/28) return 'wi-moon-waxing-crescent-2';
+		if (phase<4/28) return 'wi-moon-waxing-crescent-3';
+		if (phase<5/28) return 'wi-moon-waxing-crescent-4';
+		if (phase<6/28) return 'wi-moon-waxing-crescent-5';
+		if (phase<7/28) return 'wi-moon-waxing-crescent-6';
+		if (phase<8/28) return 'wi wi-moon-first-quarter';
+		if (phase<9/28) return 'wi wi-moon-waxing-gibbous-1';
+		if (phase<10/28) return 'wi wi-moon-waxing-gibbous-2';
+		if (phase<11/28) return 'wi wi-moon-waxing-gibbous-3';
+		if (phase<12/28) return 'wi wi-moon-waxing-gibbous-4';
+		if (phase<13/28) return 'wi wi-moon-waxing-gibbous-5';
+		if (phase<14/28) return 'wi wi-moon-waxing-gibbous-6';
+		if (phase<15/28) return 'wi wi-moon-full';
+		if (phase<16/28) return 'wi wi-moon-waning-gibbous-1';
+		if (phase<17/28) return 'wi wi-moon-waning-gibbous-2';
+		if (phase<18/28) return 'wi wi-moon-waning-gibbous-3';
+		if (phase<19/28) return 'wi wi-moon-waning-gibbous-4';
+		if (phase<20/28) return 'wi wi-moon-waning-gibbous-5';
+		if (phase<21/28) return 'wi wi-moon-waning-gibbous-6';
+		if (phase<22/28) return 'wi wi-moon-third-quarter';
+		if (phase<23/28) return 'wi wi-moon-waning-crescent-1';
+		if (phase<24/28) return 'wi wi-moon-waning-crescent-2';
+		if (phase<25/28) return 'wi wi-moon-waning-crescent-3';
+		if (phase<26/28) return 'wi wi-moon-waning-crescent-4';
+		if (phase<27/28) return 'wi wi-moon-waning-crescent-5';
+		return 'wi wi-moon-waning-crescent-6';
 	}
 });
 </script>
 <style>
 	th {background-color:aliceblue;}
+	.wi {font-size: 20px;}
 </style>
+
+
+<link rel="stylesheet" type="text/css" media="all"
+	th:href="@{/css/weather-icons.css}" />
+<link rel="stylesheet" type="text/css" media="all"
+	th:href="@{/css/weather-icons-wind.css}" />
+	
+	
 </head>
 <body>
 	<nav th:replace="include :: navbar"></nav>
@@ -196,6 +252,10 @@ $().ready(function() {
 						<th th:text="#{date}"></th>
 						<th th:text="#{tempMin}"></th>
 						<th th:text="#{tempMax}"></th>
+						<!--/* <th th:text="#{description}"></th>  */-->
+						<th th:text="#{nuages}"></th>
+						<th th:text="#{pluie}"></th>
+						<th th:text="#{proba}"></th>
 					</tr>
 				</thead>
 				<tbody id="previsions">
