--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -44,6 +44,7 @@
 				<tr>
 					<th th:text="#{date}"></th>
 					<th th:text="#{temperature}"></th>
+					<th th:text="#{tempRessentie}"></th>
 					<th th:text="#{humidite}"></th>
 					<th th:text="#{rosee}"></th>
 					<th th:text="#{pression}"></th>
@@ -53,6 +54,7 @@
 				<tr>
 				    <td id="date"></td>
 				    <td id="temperature"></td>
+				    <td id="tempRessentie"></td>
 					<td id="humidite"></td>
 					<td id="rosee"></td>
 					<td id="pression"></td>
@@ -132,6 +134,11 @@
 						<th th:text="#{nuages}"></th>
 						<th th:text="#{pluie}"></th>
 						<th th:text="#{proba}"></th>
+						<th th:text="#{leverSoleil}"></th>
+						<th th:text="#{coucherSoleil}"></th>
+						<th th:text="#{leverLune}"></th>
+						<th th:text="#{coucherLune}"></th>
+						<th th:text="#{phaseLune}"></th>
 					</tr>
 				</thead>
 				<tbody id="previsions">
