météo courbes température et pression

--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -37,8 +37,6 @@
 			</div>
 		</div>
 	</div>
-	
-	
 	<div class="container-fluid" id="accordion">
 		<h1 class="item" th:text="#{aujourdhui}"></h1>
 		<div>
@@ -124,7 +122,7 @@
 				</tbody>
 			</table>
 		</div>
-		<h1 class="item" th:text="'Températures'"></h1>
+		<h1 class="item" th:text="#{TempPress}"></h1>
 		<canvas id="tempGraphe"></canvas>
 		<h1 class="item" th:text="#{previsions}"></h1>
 		<div>
