--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -18,13 +18,13 @@ $(document).ready(function() {
     	if ( type === 'row' ) {
     		let noms = "";
             table.rows( { selected: true } ).data().pluck( 0 ).each(function (value, index) {
-            	// on récupère le nom de l'essaim dans le texte de la balise <a ...>
+            	/*[- code pour traiter les caratères < > ... dans les noms -]*/
             	const a = document.createElement('a');
             	a.innerHTML = value;
             	noms += a.textContent + ",";
             });
             if (noms) { 
-                // on enlève la dernière virgule et met à jour l'url de traitement
+            	/*[- on enlève la dernière virgule et met à jour l'url de traitement -]*/
             	noms = noms.substring(0, noms.length-1);
             	$('#traitement').attr('href', [[@{/evenement/essaim/traitementLot/}]] + noms);
             	$('#sucre').attr('href', [[@{/evenement/essaim/sucreLot/}]] + noms);
@@ -67,7 +67,9 @@ $(document).ready(function() {
 				  class="selection oi oi-info" th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
 				&nbsp;
 				<a th:href="@{/essaim/statistiques}"
-				  class="oi oi-bar-chart" th:title="#{statistiquesessaims}" aria-hidden="true"></a>
+				  class="oi oi-bar-chart" th:title="#{statistiquesproduction}" aria-hidden="true"></a>
+				<a th:href="@{/essaim/statistiquesage}"
+				  class="oi oi-bar-chart" th:title="#{statistiquesage}" aria-hidden="true"></a>
         	</div>
         </div>
     </div>
