stat age reines. on ignore les reines en couveuse.

--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -67,7 +67,7 @@ $(document).ready(function() {
 				  class="selection oi oi-info" th:title="#{evenementsCommentaire}" aria-hidden="true"></a>
 				&nbsp;
 				<a th:href="@{/essaim/statistiques}"
-				  class="oi oi-bar-chart" th:title="#{statistiquesproduction}" aria-hidden="true"></a>
+				  class="oi oi-browser" th:title="#{statistiquesproduction}" aria-hidden="true"></a>
 				<a th:href="@{/essaim/statistiquesage}"
 				  class="oi oi-bar-chart" th:title="#{statistiquesage}" aria-hidden="true"></a>
         	</div>
