--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -31,7 +31,7 @@ $(document).ready(function() {
 				<a id="cree" th:href="@{/recolte/cree}"
 				  class="oi oi-plus" th:title="#{ajouterRecolte}" aria-hidden="true"></a>
 				<a th:href="@{/recolte/statistiques/essaim}"
-				  class="oi oi-bar-chart" th:title="#{statistiquesessaims}" aria-hidden="true"></a>
+				  class="oi oi-browser" th:title="#{statistiquesessaims}" aria-hidden="true"></a>
         	</div>
         </div>
     </div>
