--- a/src/main/resources/templates/essaim/essaimsStatAges.html
+++ b/src/main/resources/templates/essaim/essaimsStatAges.html
@@ -19,20 +19,20 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-			<h1 class="item" th:text="#{statistiquesage}"></h1>
-			</div>
-			
-			<div class="col">
-			  <span th:text="'Moyenne' + ' ' + 
-			  	${ageMoyenJours} + ' jours'">
-			  </span>
+				<h1 class="item" th:text="#{statistiquesage}"></h1>
 			</div>
 			<div class="col">
-			  <span th:text="'Écart type' + ' ' + 
-			  	${ageVarianceJours} + ' jours'">
-			  </span>
+			  	<span th:text="#{Moyenne} + ' ' + ${ageMoyenJours} + ' jours'">
+			  	</span>
 			</div>
-			
+			<div class="col">
+			  	<span th:text="#{EcartType} + ' ' + ${ageVarianceJours} + ' jours'">
+			  	</span>
+			</div>
+			<div class="col">
+			  	<span th:text="#{EnCouveuse} + ' ' + ${nbCouveuse}">
+			  	</span>
+			</div>
         </div>
     </div>
 	<div class="container-fluid">
