--- a/src/main/resources/templates/personne/personneDetail.html
+++ b/src/main/resources/templates/personne/personneDetail.html
@@ -29,7 +29,8 @@ $().ready(function() {
 				<a th:href="@{'/personne/modifie/'+${personne.id}}"
 				 class="oi oi-pencil" th:title="#{modifier}" aria-hidden="true"></a>
 			    <a id="supprime" th:href="@{'/personne/supprime/'+${personne.id}}"
-			      class="confirmation oi oi-trash" th:title="#{supprimer}" aria-hidden="true"></a>
+			      class="confirmation oi oi-trash" th:title="#{supprimer}" 
+			      style="color:red" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
