--- a/src/main/resources/templates/evenement/evenementDetail.html
+++ b/src/main/resources/templates/evenement/evenementDetail.html
@@ -26,7 +26,7 @@ $(document).ready(function() {
 					class="oi oi-pencil" th:title="#{modifier}" aria-hidden="true"></span>
 				</a> 
 				<a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
-					class="confirmation oi oi-trash" th:title="#{supprimer}"
+					class="confirmation oi oi-trash" style="color:red" th:title="#{supprimer}"
 					aria-hidden="true"></span>
 				</a>
 			</div>
