--- a/src/main/resources/templates/essaim/essaimsStatAges.html
+++ b/src/main/resources/templates/essaim/essaimsStatAges.html
@@ -8,6 +8,18 @@
 <script th:src="@{/js/ruches/essaimsStatAge.js}"></script>
 <script th:inline="javascript">
 	const agesHisto = [[${agesHisto}]];
+	// const nbCouveuse = [[${nbCouveuse}]];
+	const ageMoyenJours = [[${ageMoyenJours}]];
+	const ageVarianceJours = [[${ageVarianceJours}]];
+	// const horsRuche = [[${horsRuche}]];
+	const ageMaxJours = [[${ageMaxJours}]];
+	const ageMinJours = [[${ageMinJours}]];
+	// const EnCouveuse = [[#{EnCouveuse}]];
+	const Moyenne = [[#{Moyenne}]];
+	const EcartType = [[#{EcartType}]];
+	// const horsRucheTxt = [[#{horsRuche}]];
+	const Min = [[#{Min}]];
+	const Max = [[#{Max}]];
 	$(document).ready(function() { graphe(); });
 </script>
 </head>
@@ -16,6 +28,7 @@
 	<br />
 	<br />
 	<br />
+<!--/*
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
@@ -43,6 +56,7 @@
 			</div>	
         </div>
     </div>
+   */-->
 	<div class="container-fluid">
 		<canvas id="ctx"></canvas>
 	</div>
