--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -32,6 +32,8 @@ $(document).ready(function() {
 				  class="oi oi-plus" th:title="#{ajouterRecolte}" aria-hidden="true"></a>
 				<a th:href="@{/recolte/statistiques/essaim}"
 				  class="oi oi-browser" th:title="#{statistiquesessaims}" aria-hidden="true"></a>
+				<a th:href="@{/recolte/statprod}"
+				  class="oi oi-bar-chart" th:title="#{statistiquesProd}" aria-hidden="true"></a>
         	</div>
         </div>
     </div>
