recoltes statistiques calcul poids par essaim par année

--- a/src/main/resources/templates/recolte/recoltesStatProd.html
+++ b/src/main/resources/templates/recolte/recoltesStatProd.html
@@ -10,6 +10,7 @@
 	const poidsMielHausses = [[${poidsMielHausses}]];
 	const poidsMielPots = [[${poidsMielPots}]];
 	const debutAnnee = [[${debutAnnee}]];
+	const nbIEssaims = [[${nbIEssaims}]];
 	
 	const Min = [[#{Min}]];
 	$(document).ready(function() { grapheRecolte(); });
